--- a/api_sim_repo/serverless.yml
+++ b/api_sim_repo/serverless.yml
@@ -57,6 +57,7 @@ functions:
       - http:
           path: repo/similar
           method: get
+          cors: true
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
