--- a/api_node/package.json
+++ b/api_node/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.0.6",
     "serverless-http": "^1.5.5"
