--- a/api_sim_repo/.vscode/settings.json
+++ b/api_sim_repo/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "python.pythonPath": "${workspaceFolder}/env/bin/python"
+  "python.pythonPath": "${workspaceFolder}/env/bin/python",
+  "python.formatting.provider": "autopep8",
+  "python.linting.enabled": false
 }
