download S3 content directly into memory, fixes lambda unable to write local file error

--- a/api_sim_repo/serverless.yml
+++ b/api_sim_repo/serverless.yml
@@ -3,6 +3,10 @@ service: api-sim-repo
 provider:
   name: aws
   runtime: python2.7
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action: "s3:Get*"
+      Resource: "*"
 
 # you can add packaging information here
 package:
