--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "twifront",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://max0ne.github.io/twinkeydow",
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
@@ -18,6 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
