use lambda api `oauth_login` to redirect frontend to github, so that backend has complete control of github client id & oauth state, use Secrets Manager with node api

--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "twifront",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://max0ne.github.io/twinkeydow",
+  "homepage": "https://max0ne.github.io/twinkeydow/",
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
