--- a/api/node/package.json
+++ b/api/node/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.0.6",
+    "morgan": "^1.9.0",
     "serverless-http": "^1.5.5"
   },
   "devDependencies": {
