--- a/api/node/serverless.yml
+++ b/api/node/serverless.yml
@@ -5,9 +5,16 @@ provider:
   runtime: nodejs8.10
   stage: dev
   region: us-east-1
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action: "secretsmanager:GetSecretValue"
+      Resource:
+        - "arn:aws:secretsmanager:*:*:secret:mongodb_credential-FNzCJl"
+        - "arn:aws:secretsmanager:*:*:secret:github_oauth-AaxpuG"
 
 functions:
   main:
+    environment: ${file(./env.yml)} 
     handler: index.handler
     events:
       - http: ANY /
