--- a/front/package.json
+++ b/front/package.json
@@ -17,10 +17,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-gh": "PUBLIC_URL=https://max0ne.github.io/twinkeydow/ react-scripts build",
-    "deploy-gh": "npm run build-gh && gh-pages -d build",
+    "build-dev": "PUBLIC_URL=https://twinkeydow-dev.mingfei.me/ react-scripts build",
     "build-s3": "PUBLIC_URL=https://twinkeydow.mingfei.me/ react-scripts build",
-    "deploy-s3": "npm run build-s3 && aws s3 cp build s3://twinkeydow.mingfei.me/ --recursive --profile mingfei",
+    "build-gh": "PUBLIC_URL=https://max0ne.github.io/twinkeydow/ react-scripts build",
+    "push-dev": "aws s3 cp build s3://twinkeydow-dev.mingfei.me/ --recursive --profile mingfei",
+    "push-s3": "aws s3 cp build s3://twinkeydow.mingfei.me/ --recursive --profile mingfei",
+    "push-gh": "gh-pages -d build",
+    "deploy-dev": "npm run build-dev && npm run push-dev",
+    "deploy-s3": "npm run build-s3 && npm run push-s3",
+    "deploy-gh": "npm run build-gh && npm run push-gh",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
