fix circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,6 @@ jobs:
     docker:
       - image: circleci/node:latest
     steps:
-      # check out the code in the project directory
       - checkout
-
-      # install deplendencies
-      - run:
-        name: install deplendencies
-        command: 'cd front && npm i'
-
-      - run:
-        name: build dev
-        command: 'cd front && npm run build-dev'
+      - run: cd front && npm i
+      - run: cd front && npm run build-dev
