--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,24 @@
 version: 2
 jobs:
-  build:
+  prepare:
+    working_directory: ~/front
     docker:
       - image: circleci/node:latest
     steps:
       - checkout
-      - run: cd front && npm i
-      - run: cd front && npm run build-dev
+      - restore_cache:
+          name: Restore node modules cache
+          key: front_node_modules-{{ checksum "package-lock.json" }}
+      - run: npm i
+      - save_cache:
+          name: Save node modules cache
+          key: front_node_modules-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+
+  build:
+    working_directory: ~/front
+    docker:
+      - image: circleci/node:latest
+    steps:
+      - run: npm run build-dev
