--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-toastify": "^4.3.2",
     "redux": "^3.7.2",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.1"
