--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,14 @@ jobs:
           paths:
             - front/node_modules
       - run: cd front && npm run build-dev
+
+  deploy:
+    docker:
+      - image: circleci/python:2.7-jessie
+    steps:
+      - run:
+          name: Install awscli
+          command: sudo pip install awscli
+      - run:
+          name: Deploy to S3
+          command: aws s3 cp build s3://twinkeydow-dev.mingfei.me/ --recursive
