--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,3 +26,15 @@ jobs:
       - run:
           name: Deploy to S3
           command: aws s3 cp build s3://twinkeydow-dev.mingfei.me/ --recursive
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
