--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: sudo pip install awscli
       - run:
           name: Deploy to S3
-          command: aws s3 cp build s3://twinkeydow-dev.mingfei.me/ --recursive
+          command: aws s3 cp front/build s3://twinkeydow-dev.mingfei.me/ --recursive
 
 workflows:
   version: 2
