--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run: cd front && npm i
       - run: cd front && npm run build-dev
-      - run: aws s3 cp front/build s3://twinkeydow-dev.mingfei.me/ --recursive
+      - run: aws s3 cp build s3://twinkeydow-dev.mingfei.me/ --recursive
 
   build-deploy-prod:
     docker:
@@ -18,7 +18,7 @@ jobs:
       - run: cd front && npm run build-s3
       - run:
           name: Deploy to S3
-          command: cd front && aws s3 cp front/build s3://twinkeydow.mingfei.me/ --recursive
+          command: cd front && aws s3 cp build s3://twinkeydow.mingfei.me/ --recursive
       - run: cd front && npm run build-gh
       - run:
           name: Deploy to Github Pages
