--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run: cd front && npm i
       - run: cd front && npm run build-dev
-      - run: cd front && aws s3 cp build s3://dev.twinkeydow.mingfei.me/ --recursive
+      - run: cd front && aws s3 cp build s3://dev-twinkeydow.mingfei.me/ --recursive
 
   build-deploy-prod:
     docker:
