--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "language-map": "^1.3.0",
     "lodash": "^4.17.5",
     "react": "^16.3.1",
+    "react-content-loader": "^3.1.2",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
